Fixed z-index of slide dots and slide next and prev button

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,10 @@ a{
     text-decoration: none;
 }
 
+.hide{
+    z-index: -1;
+}
+
 /*========= HEADER & NAV =======*/
 .header{
     width: 100%; /* 1 */
@@ -165,7 +169,7 @@ a{
     border-radius: 5px;
     opacity: 0.7;
     transition: background-color 0.6s ease;
-    z-index: -1;
+
 }
 
 .prev:hover, 
@@ -184,7 +188,7 @@ a{
     position: absolute;
     bottom: 46%;
     width: 100%;
-    z-index: -1;
+ 
     
 }
 
